--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alt-profanity-check==1.1.2
 anyascii==0.3.1
 asgiref==3.5.2
+astroid==2.12.10
 async-generator==1.10
 attrs==21.4.0
 beautifulsoup4==4.9.3
 blis==0.7.8
+Brotli==1.0.9
 cached-property==1.5.2
 catalogue==1.0.0
 certifi==2022.6.15
@@ -14,7 +16,10 @@ coverage==6.4.1
 crispy-bootstrap5==0.6
 cryptography==37.0.4
 cymem==2.0.6
+defusedxml==0.7.1
+dill==0.3.5.1
 Django==4.1
+django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-filter==21.1
 django-html-validator==0.5.1
@@ -22,38 +27,50 @@ django-modelcluster==6.0
 django-permissionedforms==0.1
 django-taggit==2.1.0
 django-treebeard==4.5.1
+django-webpack-loader==1.6.0
 djangorestframework==3.13.1
 draftjs-exporter==2.1.7
 et-xmlfile==1.1.0
+gunicorn==20.1.0
 h11==0.13.0
 html5lib==1.1
 idna==3.3
+isort==5.10.1
 joblib==1.2.0
 l18n==2021.3
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 more-itertools==8.14.0
 murmurhash==1.0.8
 numpy==1.23.3
+oauthlib==3.2.1
 openpyxl==3.0.10
 ordered-set==3.1.1
 ordered-set-stubs==0.1.3
 outcome==1.2.0
 Pillow==9.2.0
 plac==1.1.3
+platformdirs==2.5.2
 poetry-version==0.1.5
 preshed==3.0.7
 profanity-filter==1.3.3
 psycopg2-binary==2.9.3
 pycparser==2.21
 pydantic==1.10.2
+PyJWT==2.5.0
+pylint==2.15.3
 pyOpenSSL==22.0.0
 PySocks==1.7.1
+python3-openid==3.2.0
 pytz==2022.1
 redis==3.5.3
 requests==2.28.1
+requests-oauthlib==1.3.1
 ruamel.yaml==0.15.100
 scikit-learn==1.1.2
 scipy==1.9.1
 selenium==4.3.0
+sentry-sdk==1.9.10
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
@@ -65,16 +82,20 @@ tablib==3.2.1
 telepath==0.2
 thinc==7.4.5
 threadpoolctl==3.1.0
-tomlkit==0.5.11
+tomli==2.0.1
+tomlkit==0.11.5
 tqdm==4.64.1
 trio==0.21.0
 trio-websocket==0.9.2
+types-cryptography==3.3.23
 typing_extensions==4.3.0
-urllib3==1.26.10
+urllib3==1.26.12
 wagtail==3.0.1
 wasabi==0.10.1
 webencodings==0.5.1
+whitenoise==6.2.0
 Willow==1.4.1
+wrapt==1.14.1
 wsproto==1.1.0
 xlrd==2.0.1
 XlsxWriter==3.0.3
