--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cryptography==37.0.4
 cymem==2.0.6
 defusedxml==0.7.1
 dill==0.3.5.1
+dj-database-url==1.0.0
 Django==4.1
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
