--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 alt-profanity-check==1.1.2
 anyascii==0.3.1
 asgiref==3.5.2
-astroid==2.12.10
+astroid==2.12.12
 async-generator==1.10
 attrs==21.4.0
 beautifulsoup4==4.9.3
 blis==0.7.8
 Brotli==1.0.9
 cached-property==1.5.2
-catalogue==1.0.0
+catalogue==2.0.8
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+click==8.1.3
+confection==0.0.3
 coverage==6.4.1
 crispy-bootstrap5==0.6
 cryptography==37.0.4
@@ -19,7 +21,7 @@ cymem==2.0.6
 defusedxml==0.7.1
 dill==0.3.5.1
 dj-database-url==1.0.0
-Django==4.1
+Django==4.0.8
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-filter==21.1
@@ -37,9 +39,12 @@ h11==0.13.0
 html5lib==1.1
 idna==3.3
 isort==5.10.1
+Jinja2==3.1.2
 joblib==1.2.0
 l18n==2021.3
+langcodes==3.3.0
 lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 mccabe==0.7.0
 more-itertools==8.14.0
 murmurhash==1.0.8
@@ -49,17 +54,19 @@ openpyxl==3.0.10
 ordered-set==3.1.1
 ordered-set-stubs==0.1.3
 outcome==1.2.0
+packaging==21.3
+pathy==0.6.2
 Pillow==9.2.0
 plac==1.1.3
 platformdirs==2.5.2
 preshed==3.0.7
-profanity-filter==1.3.3
 psycopg2-binary==2.9.3
 pycparser==2.21
 pydantic==1.10.2
 PyJWT==2.5.0
-pylint==2.15.3
+pylint==2.15.5
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
 PySocks==1.7.1
 python3-openid==3.2.0
 pytz==2022.1
@@ -72,25 +79,29 @@ scipy==1.9.1
 selenium==4.3.0
 sentry-sdk==1.9.10
 six==1.16.0
+smart-open==5.2.1
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-spacy==2.3.7
+spacy==3.4.2
+spacy-legacy==3.0.10
+spacy-loggers==1.0.3
 sqlparse==0.4.2
-srsly==1.0.5
+srsly==2.4.5
 tablib==3.2.1
 telepath==0.2
-thinc==7.4.5
+thinc==8.1.5
 threadpoolctl==3.1.0
 tomli==2.0.1
-tomlkit==0.11.5
+tomlkit==0.11.6
 tqdm==4.64.1
 trio==0.21.0
 trio-websocket==0.9.2
+typer==0.4.2
 types-cryptography==3.3.23
 typing_extensions==4.3.0
 urllib3==1.26.12
-wagtail==3.0.1
+wagtail==4.0.4
 wasabi==0.10.1
 webencodings==0.5.1
 whitenoise==6.2.0
