add boto3 and make requirements list a little better

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-alt_profanity_check==1.1.2
-dj_database_url==1.0.0
-Django==4.0.8
-django_html_validator==0.5.1
-django_modelcluster==6.0
-profanity_check==1.0.3
-wagtail==4.0.4
+alt_profanity_check>=1.1.2
+dj_database_url>=1.0.0
+Django>=4.0.8<5.0.0
+django_html_validator>=0.5.1
+django_modelcluster>=6.0
+profanity_check>=1.0.3
+wagtail>=4.0.4<5.0.0
 gunicorn
 whitenoise
 django-crispy-forms
 crispy-bootstrap5
 psycopg2
 django-storages
+boto3
