--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django_modelcluster>=6.0
 wagtail>=5.0<6.0
 gunicorn
 whitenoise
-django-crispy-forms
+django-crispy-forms>=2.0
 crispy-bootstrap5
 psycopg2
 django-storages
